--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-select": "^1.2.0",
+    "@react-three/drei": "^9.61.4",
+    "@react-three/postprocessing": "^2.7.1",
     "@studio-freight/hamo": "^0.6.12",
     "@studio-freight/react-lenis": "0.0.9",
     "@studio-freight/tempus": "0.0.36",
+    "@theatre/core": "^0.6.0",
+    "@theatre/r3f": "^0.6.0",
     "clsx": "^1.2.1",
     "embla-carousel": "7.0.9",
     "embla-carousel-autoplay": "7.0.9",
@@ -43,6 +47,7 @@
     "@size-limit/preset-app": "^8.1.2",
     "@svgr/webpack": "^6.5.1",
     "critters": "^0.0.16",
+    "@theatre/studio": "^0.6.0",
     "cross-env": "^7.0.3",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "eslint": "8.33.0",
