--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-pwa": "5.6.0",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.48",
+    "pnpm": "^8.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use": "^17.4.0",
@@ -46,8 +47,8 @@
     "@next/bundle-analyzer": "^13.1.6",
     "@size-limit/preset-app": "^8.1.2",
     "@svgr/webpack": "^6.5.1",
-    "critters": "^0.0.16",
     "@theatre/studio": "^0.6.0",
+    "critters": "^0.0.16",
     "cross-env": "^7.0.3",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "eslint": "8.33.0",
@@ -63,6 +64,12 @@
   "lint-staged": {
     "*.js": "eslint --cache --fix",
     "*.{js,css,scss,md}": "prettier --write"
+  },
+  "pnpm": {
+    "overrides": {
+      "throttle-debounce": "5.0.0",
+      "@studio-freight/tempus": "0.0.36"
+    }
   },
   "size-limit": [
     {
