--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-WEBSITE_URL="http://www.example.com"
+WEBSITE_URL="http://www.bliss.com"
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID="GTM-XXXXXX"
 NEXT_PUBLIC_GOOGLE_ANALYTICS="UA-XXXXX-X"
