--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "embla-carousel-autoplay": "7.0.9",
     "embla-carousel-react": "7.0.9",
     "gsap": "^3.11.4",
+    "leva": "^0.9.35",
     "lint-staged": "^13.1.0",
     "lottie-web": "^5.10.2",
     "next": "13.1.6",
